k8s-resources/web-challenges/svc-captcha.yaml
apiVersion: v1
kind: Service
metadata:
  name: invisible-captcha
spec:
  selector:
    app: invisible-captcha
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
  type: NodePort
