k8s-resources/web-challenges/svc-fishy.yaml
apiVersion: v1
kind: Service
metadata:
  name: a-little-fishy
spec:
  selector:
    app: a-little-fishy
  ports:
  - name: http
    protocol: TCP
    port: 8000
    targetPort: 8000
  type: NodePort
