k8s-resources/web-challenges/svc-login-trivia.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-trivia
spec:
  selector:
    app: login-trivia
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
